# lttng-scope

./: CMakeLists.txt
src/: app.cpp  main.cpp  scope-view.cpp
src/include/: types.hh
src/include/gui/: scope-view.hh
src/include/model/: context.hh  model.hh  state.hh
src/include/trace/: event-data.hh  event-type.hh  event.hh  trace.hh  types.hh
